Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-07-12 Kimmo
 PATCH: [ 1517057 ] Option to Ignore Multiline Comments
  Submitted by David Maisonave
  Src: DiffWrapper.cpp DiffWrapper.h DirDoc.cpp MainFrm.cpp Merge.rc MergeDoc.cpp
   OptionsDef.h OptionsInit.cpp PatchTool.cpp PropCompare.cpp Propcompare.h
   resource.h
  Src/Languages/*: Merge*.rc
 Add Ed_K and David Maisonave to Contributors
  Docs/Users: Contributors.txt
 Document UniMemFile::ReadString() function parameters and return values
  Src/Common: UniFile.cpp

2006-07-09 Kimmo
 Quiet warning about deprecated function for VS2003 and later
  Merge.cpp

2006-07-08 Kimmo
 PATCH: [ 1517362 ] Ensure diff is visible in location view
  Src: LocationView.cpp
 Fix codinstyle in LocationView.cpp (messed up by patch #1517362)
  Src: LocationView.cpp
 Make VS2005 build less noisy by defining _CRT_SECURE_NO_DEPRECATE for it
  Src: StdAfx.h

2006-07-04 Kimmo
 PATCH: [ 1516626 ] Enable double-click in column customization dialog
  Src: DirColsDlg.cpp DirColsDlg.h
 PATCH: [ 1514435 ] Optimize versioninfo reading
  Src: AboutDlg.cpp ConfigLog.cpp Splash.cpp
  Src/Common: version.cpp version.h

2006-07-04 Takashi
 BUG: [ 1303166 ] crash or freeze on closing all window
  Src: MainFrm.cpp

2006-07-03 WinMerge experimental release 2.5.5.2 (cvs)

2006-07-03 Kimmo
 PATCH: [ 1515380 ] Page Up/Down Anomaly
  Submitted by Ed_K
  Src/editlib: ccrystaltextview2.cpp
 PATCH: [ 1515966 ] Use View-IDs in MergeDoc.cpp
  Src: MergeDoc.cpp MergeDoc.h
 PATCH: [ 1516016 ] Fix poor handling of invalid tab size in Options-dialog
  Src: Merge.rc PropEditor.cpp PropEditor.h resource.h
  Src/Languages/*: Merge*.rc
 Fix comment in DiffList.cpp
  Src: DiffList.cpp

2006-07-02 Kimmo
 PATCH: [ 1515669 ] Add selected difference marker for locationview
  Src: LocationView.cpp LocationView.h

2006-07-01 Kimmo
 PATCH: [ 1514459 ] Cleanup for LocationView code (use view ID)